oc_manifests/example-app1/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-springboot
  namespace: ocp-demo
  labels:
    app: hello-springboot
    app.io/springboot: hello-world
    app.kubernetes.io/component: hello-springboot
    app.kubernetes.io/instance: hello-springboot
    app.kubernetes.io/name: hello-springboot
    app.kubernetes.io/part-of: demo-apps
    app.openshift.io/runtime-version: latest
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8081-tcp
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: 8082-tcp
      protocol: TCP
      port: 8082
      targetPort: 8082
    - name: 8083-tcp
      protocol: TCP
      port: 8083
      targetPort: 8083
    - name: 8084-tcp
      protocol: TCP
      port: 8084
      targetPort: 8084
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: hello-springboot
